--- a/main.html
+++ b/main.html
@@ -8,19 +8,21 @@
 
 <body>
 
-
-<h1>Login Form</h1>
-  <form id="login-form">
-    <label for="username">Username:</label>
-    <input type="text" id="username" placeholder="Username"><br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" placeholder="Password"><br><br>
-    <input type="checkbox" id="checkbox">
-    <label for="checkbox">Remember me</label><br><br>
-    <input type="submit" id="submit" value="Submit">
-  </form>
-  <button id="existing" style="display: none;">Login as existing user</button>
-
+<form id="loginForm">
+  <h1>Login Form</h1>
+  
+  <label for="username">Username</label>
+  <input type="text" id="username" name="username" placeholder="Username">
+  
+  <label for="password">Password</label>
+  <input type="password" id="password" name="password" placeholder="Password">
+  
+  <input type="checkbox" id="checkbox">
+  <label for="checkbox">Remember me</label>
+  
+  <input type="submit" id="submit" value="Submit">
+  
+</form>
 
 
 
