--- a/main.html
+++ b/main.html
@@ -8,23 +8,23 @@
 
 <body>
 
-<form id="loginForm">
-  <h1>Login Form</h1>
-  
-  <label for="username">Username</label>
-  <input type="text" id="username" name="username" placeholder="Username">
-  
-  <label for="password">Password</label>
-  <input type="password" id="password" name="password" placeholder="Password">
-  
-  <input type="checkbox" id="checkbox">
-  <label for="checkbox">Remember me</label>
-  
-  <input type="submit" id="submit" value="Submit">
-  
-</form>
+	<h1>Login Form</h1>
 
-
+  <form id="loginForm">
+    <div>
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" placeholder="Username">
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" placeholder="Password">
+    </div>
+    <div>
+      <input type="checkbox" id="checkbox">
+      <label for="checkbox">Remember me:</label>
+    </div>
+    <input type="submit" id="submit" value="Submit">
+  </form>
 
 
 
